# delphi

./: .gitignore  README.md
backend/: .env  agent.py  gemini_proxy.py  main.py  orchestrator.py  private_keys.json  pyproject.toml  uagent.py
backend/agents/: browser.py  orchestrator.py  vision.py  voice.py
frontend/: .env  next.config.js  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: CameraPreview.tsx
frontend/app/services/: geminiWebSocket.ts  transcriptionService.ts  ttsService.ts
frontend/components/: audio-input.tsx
frontend/src/: App.tsx
frontend/src/components/browser-intent/: BrowserIntentAgent.scss  BrowserIntentAgent.tsx
frontend/src/components/control-tray/: ControlTray.tsx
frontend/src/hooks/: use-live-api.ts
frontend/src/lib/: audio-recorder.ts  audio-streamer.ts  multimodal-live-client.ts
