[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-use==0.1.40",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "langchain-google-genai==2.1.3",
    "google-generativeai>=0.8.5",
    "nest-asyncio>=1.6.0",
    "uagents>=0.22.3",
    "uvicorn>=0.34.2",
    "websockets>=15.0.1",
]
